# nasin-lang

./: .gdb_history  .gitignore  .gitmodules  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md
cranelift-shim/: Cargo.toml
cranelift-shim/src/: lib.rs
docs/: bytecode-ir-refactoring.md
src/: config.rs  context.rs  errors.rs  lib.rs  main.rs  sources.rs
src/bytecode/: cursor.rs  instr.rs  mod.rs  module.rs  name.rs  printer.rs  ty.rs  value.rs
src/codegen/binary/: context.rs  debug.rs  dump.rs  func.rs  mod.rs  name_mangling.rs  types.rs
src/context/: mod.rs  runtime.rs
src/parser/: expr_parser.rs  mod.rs  module_parser.rs  parser_value.rs  type_parser.rs
src/transform/: finish_dispatch.rs  finish_get_property.rs  instantiate_generic_funcs.rs  lower_type_name.rs  mod.rs
src/typecheck/: constraints.rs  mod.rs
src/utils/: cmd.rs  deadlock_guard.rs  mod.rs  paths.rs  replace_with.rs  scope_stack.rs  sorted_map.rs  str.rs  string_lit.rs  to_radix.rs  traits.rs  write_io.rs
tests/: _test.list  _test.list.bi  aritimetic_operators.nsn  comparison_operators.nsn  func_as_value.nsn  func_declaration.nsn  generic.nsn  generic_func.nsn  generic_method.nsn  generic_record.nsn  global_string.nsn  hello.nsn  hello_array.nsn  if.nsn  if_returning.nsn  interface.nsn  method.nsn  readme_example.nsn  record_type.nsn  recursion.nsn  return_record.nsn  string_concat.nsn
