[package]
name = "nasin"
description = "Elegant pure functional programming language"
authors = ["Felipe Nascimento <felipenasgomes@gmail.com>"]
version = "0.1.0"
edition = "2024"

[workspace]
members = ["cranelift-shim", "tree-sitter-nasin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bump-scope = "2.2.0"
clap = { version = "4.4.18", features = ["derive"] }
cranelift_shim = { path = "cranelift-shim" }
derive-ctor = "1.0.6"
derive_more = { version = "^1.0.0-beta.6", features = [
    "display",
    "into_iterator",
    "full",
] }
derive_setters = "0.1.6"
genawaiter = "0.99.1"
gimli = "0.32.1"
itertools = "0.14.0"
lazy-init = "0.5.1"
object = "0.32.2"
target-lexicon = "0.12.13"
thiserror = "1.0.62"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tree-sitter = "0.23.0"
tree-sitter-nasin = { version = "0.0.1", path = "tree-sitter-nasin" }
